syntax = "proto3";
package job;

option go_package = "github.com/aos-dev/dm/proto";

message Job {
    string id = 1;
    uint32 type = 2;
    bytes content = 3;
}

message JobReply {
    string id = 1;
    uint32 status = 2;
    string message = 3;
}

message CopyDir {
    uint32 src = 1;
    uint32 dst = 2;
    string src_path = 3;
    string dst_path = 4;
    bool recursive = 5;
}

message CopyFile {
    uint32 src = 1;
    uint32 dst = 2;
    string src_path = 3;
    string dst_path = 4;
}

message CopySingleFile {
    uint32 src = 1;
    uint32 dst = 2;
    string src_path = 3;
    string dst_path = 4;
    int64 size = 5;
}

message CopyMultipartFile {
    uint32 src = 1;
    uint32 dst = 2;
    string src_path = 3;
    string dst_path = 4;
    int64 size = 5;
}

message CopyMultipart {
    uint32 src = 1;
    uint32 dst = 2;
    string src_path = 3;
    string dst_path = 4;
    string multipart_id = 5;
    int64 size = 6;
    uint32 index = 7;
    int64 offset = 8;
}

